Add reset button, and other UI enhancements

--- a/ConnectFour-in-JS/ConnectFour-in-JS.csproj
+++ b/ConnectFour-in-JS/ConnectFour-in-JS.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <RootNamespace>ConnectFour_in_JS</RootNamespace>
+    <UserSecretsId>8b099086-137a-49f3-98d1-fa4cc82449f6</UserSecretsId>
   </PropertyGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
